<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_15sdp"
    tools:context=".SignUpFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_SigUpText_SigUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="Sign Up"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/etUsernameSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:layout_marginBottom="3dp"
                android:text="@string/username"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_alignRight="@id/etUsernameSignUp"/>
        </LinearLayout>
        <EditText
            android:layout_below="@id/etUsernameSignUp"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:inputType="textCapSentences"
            android:layout_height="44dp"
            android:hint="@string/enter_your_username"/>

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/tv_email_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/email"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_alignRight="@id/tv_email_SignUp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/et_email_signUp"
            android:layout_below="@id/tv_email_SignUp"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:layout_marginBottom="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/tv_password_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:layout_alignRight="@id/tv_password_signUp"/>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightBlack"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_below="@id/tv_password_signUp"
            >
<!--            app:passwordToggleDrawable="@drawable/eye"-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_signUp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/enter_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textSize="16dp"
                android:id="@+id/tv_confirmPassword_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:text="@string/confirm_password"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"/>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightBlack"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_below="@id/tv_confirmPassword_signUp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etConfirmPasswordSignUp"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/enter_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_continue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/continuebtnString"/>
























    </LinearLayout>
</ScrollView>