<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/MarginStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="Log In"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16dp"
            android:layout_marginBottom="5dp"
            android:text="Email"/>
        <EditText
            android:inputType="textEmailAddress"
            android:background="@drawable/background_edittext"
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:layout_height="44dp"
            android:textColorHint="@color/lightBlack"
            android:hint="  Enter your email"/>

        <TextView
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold"
            android:textSize="16dp"
            android:id="@+id/tv_Password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/password"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightBlack"
            app:passwordToggleEnabled="true"
            android:layout_below="@id/tv_Password_login"

            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/enter_password"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_gravity="end"
            android:layout_below="@id/et_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightBlack"
            android:text="Forget Password?"/>

        <TextView
            android:id="@+id/textLoginLog"
            android:elevation="@dimen/_5sdp"
            style="@style/MainButtonStyle"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/background_continue"
            android:textColor="@color/white"
            android:text="@string/continuebtnString"/>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ornament24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"/>
            <ImageView
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ornament24"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:background="@drawable/background_login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/apple"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in with Apple"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:background="@drawable/background_login_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google"
                android:layout_marginEnd="@dimen/_10sdp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in with google"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textColor="@color/lightBlack"
                android:text="Haven’t registered yet?"/>

            <TextView

                android:textSize="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=" Create an account"/>



        </LinearLayout>




    </androidx.appcompat.widget.LinearLayoutCompat>









</ScrollView>